src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;


.generator-button {
    @apply text-white bg-emerald-500 p-4 border-2 h-1/5 whitespace-nowrap flex justify-center
    border-solid border-white rounded-lg hover:bg-emerald-600 duration-300 max-md:h-3/5 items-center;
}

.password-input {
    @apply text-emerald-500 bg-slate-800 rounded-md 
    border-zinc-500 border-2 text-center h-full w-full animate-appear
    cursor-pointer hover:text-white duration-500 hover:tracking-widest 
    max-md:text-sm;
}

.size-input {
    @apply bg-transparent appearance-none cursor-pointer w-full h-full outline-none 
    max-md:w-full flex items-center justify-center;
}


.size-input::-webkit-slider-runnable-track, .size-input::-moz-range-track, .size-input::-ms-track {
    @apply bg-emerald-500 h-6 rounded-xl max-sm:h-4 flex items-center justify-center duration-300;
}

.size-input::-webkit-slider-thumb, .size-input::-moz-range-thumb, .size-input::-ms-thumb {
    @apply appearance-none border-emerald-300 border-2 
    bg-slate-600 h-6 w-6 rounded-full max-md:h-10 max-md:w-10 max-md:-mt-2 hover:h-8 hover:w-8 hover:rounded-t-none hover:-mt-1 max-md:hover:w-12 max-md:hover:h-12 max-md:hover:-mt-3 duration-200;
}

.slider {
    @apply absolute cursor-pointer
    bg-slate-500 top-0 right-0 left-0 bottom-0 rounded-full duration-300;
}

.slider::before {
    content: "";
    @apply absolute bg-white w-2/4 h-full rounded-full duration-300;
}

input:checked + .slider {
    @apply bg-emerald-500;
}

input:checked + .slider::before {
    transform: translateX(100%);
}

